--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,13 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'kotlin-android'
+    id 'kotlin-android-extensions'
+    id "kotlin-kapt"
+    id 'dagger.hilt.android.plugin'
+    id 'androidx.navigation.safeargs'
 }
+
+apply from: 'dependency.gradle'
 
 android {
     compileSdk 31
@@ -29,6 +35,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding = true
+        dataBinding = true
+    }
 }
 
 dependencies {
@@ -40,4 +50,11 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+
+    //Dagger with Hilt
+    kapt "androidx.hilt:hilt-compiler:$rootProject.hiltViewModelVersion"
+    kapt "com.google.dagger:hilt-android-compiler:$rootProject.hiltVersion"
+    api "com.google.dagger:hilt-android:$rootProject.hiltVersion"
+    api "androidx.hilt:hilt-lifecycle-viewmodel:$rootProject.hiltViewModelVersion"
 }
