--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,62 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext.gradle_version = "7.0.3"
+    ext.kotlin_version = "1.5.31"
+    ext.hilt_version = "2.38.1"
+    ext.navigation_version = "2.4.2"
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.3"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31"
+        classpath "com.android.tools.build:gradle:$gradle_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+
+    ext {
+        // Sdk and tools
+        compileSdkVersion = 31
+        minSdkVersion = 21
+        targetSdkVersion = 31
+
+        // App dependencies
+        appCompatVersion = '1.4.1'
+        ktxVersion = '1.7.0'
+        materialVersion = '1.5.0'
+        constraintLayoutVersion = '2.1.3'
+        lifecycleVersion = '2.4.1'
+        legacySupportVersion = '1.0.0'
+        coreTestingVersion = '2.0.0'
+        coroutinesVersion = "1.5.2"
+        dataStoreVersion = "1.0.0"
+        espressoVersion = '3.1.1'
+        fragmentVersion = '1.4.1'
+        glideVersion = '4.12.0'
+        gradleVersion = '4.1.0'
+        gsonVersion = '2.8.8'
+        hiltVersion = '2.29.1-alpha'
+        hiltViewModelVersion = '1.0.0-alpha02'
+        junitVersion = '4.12'
+        kotlinVersion = '1.4.10'
+        ktlintVersion = '0.38.1'
+        lifecycleVersion = '2.2.0'
+        navigationVersion = '2.4.2'
+        okhttpLoggingVersion = '4.9.0'
+        pagingVersion = '3.1.1'
+        recyclerViewVersion = '1.3.0-alpha02'
+        retrofitVersion = '2.9.0'
+        runnerVersion = '1.0.1'
+        truthVersion = '0.42'
+        testExtJunit = '1.1.0'
+        uiAutomatorVersion = '2.2.0'
+        workVersion = '2.4.0'
+    }
+
 }
 
 task clean(type: Delete) {
