--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,8 +55,8 @@ dependencies {
     implementation project(path: ':core')
 
     //Dagger with Hilt
-    kapt "androidx.hilt:hilt-compiler:$rootProject.hiltViewModelVersion"
-    kapt "com.google.dagger:hilt-android-compiler:$rootProject.hiltVersion"
-    api "com.google.dagger:hilt-android:$rootProject.hiltVersion"
-    api "androidx.hilt:hilt-lifecycle-viewmodel:$rootProject.hiltViewModelVersion"
+    implementation("com.google.dagger:hilt-android:$rootProject.hiltVersion")
+    kapt("com.google.dagger:hilt-android-compiler:$rootProject.hiltVersion")
+
+
 }
