--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,15 +49,24 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.navigation:navigation-fragment:2.4.2'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation project(path: ':core')
 
     //Dagger with Hilt
     implementation("com.google.dagger:hilt-android:$rootProject.hiltVersion")
     kapt("com.google.dagger:hilt-android-compiler:$rootProject.hiltVersion")
+
+    //Testing
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$rootProject.coroutinesVersion"
+    testImplementation "io.mockk:mockk:1.10.6"
+    testImplementation "com.squareup.okhttp3:mockwebserver:$rootProject.okhttp_version"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation "io.mockk:mockk-android:1.10.6"
+    androidTestImplementation 'androidx.test:rules:1.2.0'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
 
 
 }
