--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ buildscript {
         ktlintVersion = '0.38.1'
         lifecycleVersion = '2.2.0'
         navigationVersion = '2.4.2'
+        okhttp_version = "4.9.1"
         okhttpLoggingVersion = '4.9.0'
         pagingVersion = '3.1.1'
         recyclerViewVersion = '1.3.0-alpha02'
